Appstack_student_http.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: "Dev environment for Student App"
Parameters:
  Ami:
    Description: "Student App AMI Details"
    Type: AWS::EC2::Image::Id
    Default: "ami-09558250a3419e7d0"
    ConstraintDescription: "must be a valid AMI"
  kAmi:
    Description: "Student App AMI Details"
    Type: AWS::EC2::Image::Id
    Default: "ami-0847b1b01067895ac"
    ConstraintDescription: "must be a valid AMI"
  KeyPair:
    Description: "Student App Key Details"
    Type: AWS::EC2::KeyPair::KeyName
    Default: "appstack"
    ConstraintDescription: "must be a valid Key"
  AppASGSize:
    Description: "Student App ASG Size Details"
    Type: Number
    Default: 2
  AppCert:
    Description: "Student App ALB ACM Cert ARN Details"
    Type: String
    Default: "arn:aws:acm:us-east-2:191155221734:certificate/52ee8120-6088-422f-b156-1b0571d946b3"
  HostedZoneID:
    Description: "Student App HostedZone ID Details"
    Type: AWS::Route53::HostedZone::Id
    Default: "Z1979XAS933KHZ"
  VpcCidr:
    Description: VPC Cidr
    Type: String
    Default: 10.0.0.0/16
  PrivateSubetCider:
    Description: Private Subnet Cidr list
    Type: CommaDelimitedList
    Default: 10.0.0.0/24, 10.0.1.0/24, 10.0.2.0/24
  PublicSubetCider: 
    Description: Public Subnet Cidr list
    Type: CommaDelimitedList
    Default: 10.0.3.0/24, 10.0.4.0/24, 10.0.5.0/24

Resources: 

  NetworkStackStudent:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: https://student-cloudformation-templates.s3.us-east-2.amazonaws.com/NetworkStackStudent.yaml 
      TimeoutInMinutes: 10   
  IAMRole:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: https://student-cloudformation-templates.s3.us-east-2.amazonaws.com/IAMRole.yaml 
      TimeoutInMinutes: 2

  IAMAppstackInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: IAMAppStackInstanceProfile
      Path: /
      Roles:
        - !GetAtt IAMRole.Outputs.IAMRole

  AppStackSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: AppStackSG
      GroupDescription: "Student App layer SG for http access"
      VpcId: !GetAtt NetworkStackStudent.Outputs.VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080  
          ToPort: 8080
          SourceSecurityGroupId: 
            Fn::GetAtt:
              - AppstackAlbSG
              - GroupId
      Tags:
        - Key: Name
          Value: AppStackSG
    
  AppstackAlbSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: AppstackAlbSG
      GroupDescription: "Student ALB layer SG for https access"
      VpcId: !GetAtt NetworkStackStudent.Outputs.VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80  
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: AppstackAlbSG
  
  AppStackSSHSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: AppStackSSHSG
      GroupDescription: "Student App layer SG for SSH access"
      VpcId: !GetAtt NetworkStackStudent.Outputs.VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22  
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: AppStackSSHSG        
    
  AppLaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      LaunchConfigurationName: "StudentAppLCV7"
      AssociatePublicIpAddress: false
      IamInstanceProfile: !Ref IAMAppstackInstanceProfile
      ImageId: 
        Ref: Ami
      InstanceType: "t2.micro"
      InstanceMonitoring: false
      BlockDeviceMappings: 
        - DeviceName: /dev/sdb
          Ebs: 
            VolumeSize: 10
            VolumeType: "gp2"
            DeleteOnTermination: true
      KeyName: 
        Ref: KeyPair 
      SecurityGroups:
        - !GetAtt AppStackSSHSG.GroupId
        - !GetAtt AppStackSG.GroupId
      UserData: !Base64 |
        #!/bin/bash -x
        sudo -i
        mkfs -t xfs /dev/xvdb
        mount /dev/xvdb /opt
        cp /etc/fstab /etc/fstab.bak
        echo "/dev/xvdb    /opt   xfs    defaults,noatime  1   1" >> /etc/fstab
        log=/var/log/AppStackDeploy.log
        repo=https://github.com/53555/Appstack-Ansible.git
        # Install Required packages
        yum install git -y > $log
        amazon-linux-extras install ansible2 -y >> $log
        git clone $repo /tmp/AppStack >> $log
        ansible-playbook /tmp/AppStack/tomcat-student-app.yml >> $log
        ansible-playbook /tmp/AppStack/CloudWatchLog.yml >> $log
        if [ $? == 0 ]
        then 
          rm -rf /tmp/AppStack
        else 
          echo "unable to delete AppStack code, previous Playbook deployment looks failed check 
                in the /var/log/cloud-init-output.log for more information" >> $log 
        fi        

  KeycloakLaunchConfiguration:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      LaunchConfigurationName: "keycloakLCV3"
      AssociatePublicIpAddress: false
      IamInstanceProfile: !Ref IAMAppstackInstanceProfile
      ImageId: 
        Ref: kAmi
      InstanceType: "t2.micro"
      InstanceMonitoring: false
      KeyName: 
        Ref: KeyPair 
      SecurityGroups:
        - !GetAtt AppStackSSHSG.GroupId
        - !GetAtt AppStackSG.GroupId
      UserData: !Base64 |
        #!/bin/bash -x
        sudo -i
        nohup /opt/keycloak/bin/launch.sh standalone.xml 0.0.0.0 &
           

  AppASG: 
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: AppASG
      VPCZoneIdentifier: 
        - !GetAtt NetworkStackStudent.Outputs.PriSub1ID
        - !GetAtt NetworkStackStudent.Outputs.PriSub2ID
        - !GetAtt NetworkStackStudent.Outputs.PriSub3ID
      LaunchConfigurationName: !Ref AppLaunchConfiguration
      MaxSize: !Ref AppASGSize
      MinSize: !Ref AppASGSize
      #DesiredCapacity: !Ref AppASGSize
      HealthCheckGracePeriod: 300
      TargetGroupARNs: 
        - Ref: AppTG
      Tags: 
        - Key: Name
          Value: Appstack-Tomcat
          PropagateAtLaunch: 'true'

  KeycloakASG: 
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: KeycloakASG
      VPCZoneIdentifier:
        - !GetAtt NetworkStackStudent.Outputs.PriSub1ID
        - !GetAtt NetworkStackStudent.Outputs.PriSub2ID
        - !GetAtt NetworkStackStudent.Outputs.PriSub3ID
      LaunchConfigurationName: !Ref KeycloakLaunchConfiguration
      MaxSize: 1
      MinSize: 1
      #DesiredCapacity: !Ref AppASGSize
      HealthCheckGracePeriod: 300
      TargetGroupARNs: 
        - Ref: KeycloakTG
      Tags: 
        - Key: Name
          Value: Keycloak-Server
          PropagateAtLaunch: 'true'

  AppAlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt AppstackAlbSG.GroupId
      Subnets: #!Split [',', !Join [',', !Ref AlbSubnet]]
        - !GetAtt NetworkStackStudent.Outputs.PubSub1ID
        - !GetAtt NetworkStackStudent.Outputs.PubSub2ID
        - !GetAtt NetworkStackStudent.Outputs.PubSub3ID

  AppAlbListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: AppTG
      LoadBalancerArn:
        Ref: AppAlb
      Port: 80
      Protocol: HTTP

  KeycloakListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      ListenerArn: !Ref AppAlbListener
      Priority: 100
      Conditions:
        - Field: path-pattern
          Values:
            - "/auth/"
            - "/auth/*"
      Actions:
        - TargetGroupArn: !Ref KeycloakTG
          Type: forward

  AppTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: AppAlb
    Properties:
      HealthCheckPath: "/student/"
      HealthCheckProtocol: HTTP
      Matcher:
        HttpCode: '200,302'
      HealthCheckIntervalSeconds: 120
      HealthyThresholdCount: 3
      Port: 8080
      Protocol: HTTP
      Name: AppTG
      TargetGroupAttributes:
      - Key: stickiness.enabled
        Value: true
      UnhealthyThresholdCount: 10
      VpcId: !GetAtt NetworkStackStudent.Outputs.VPCID

  KeycloakTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: AppAlb
    Properties:
      HealthCheckPath: "/auth/"
      HealthCheckProtocol: HTTP
      Matcher:
        HttpCode: '200,302,301,303,307'
      HealthCheckIntervalSeconds: 120
      HealthyThresholdCount: 3
      Port: 8080
      Protocol: HTTP
      Name: KeycloakTG
      TargetGroupAttributes:
      - Key: stickiness.enabled
        Value: true
      UnhealthyThresholdCount: 10
      VpcId: !GetAtt NetworkStackStudent.Outputs.VPCID

  AppAlbDNSAlias:
    Type: AWS::Route53::RecordSet
    DependsOn: AppAlb
    Properties:
      AliasTarget:
        DNSName: !GetAtt 'AppAlb.DNSName'
        HostedZoneId: !GetAtt 'AppAlb.CanonicalHostedZoneID'
      HostedZoneId: !Ref HostedZoneID
      Name: student.prodops-fico.com
      Type: A
      
  

Outputs: {}
